<resources>
    <string name="app_name">Plugin</string>
    <string name="startmenu">Start Cheat</string>
    <string name="stopmenu">Stop Cheat</string>
    <string name="ex_setting">Export settings</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="textlink">CHEATASSASSIN.COM</string>
    <string name="webAddr"><a href="https://CheatAssassin.com/">CheatAssassin.COM</a></string>
    <string name="import_stting">Import settings</string>
    <string name="r_fps">Render framerate</string>
    <string name="fps30">30Fps</string>
    <string name="fps45">45Fps</string>
    <string name="fps60">60Fps</string>
    <string name="fps90">90Fps</string>
    <string name="espgeneric">ESP generic adjustments</string>
    <string name="health">Health</string>
    <string name="teamid">TeamID</string>
    <string name="name">Name</string>
    <string name="enemcount">Enemy count</string>
    <string name="line">Line</string>
    <string name="alertgrenade">Throwables</string>
    <string name="distance">Distance</string>
    <string name="skel">Skeleton</string>
    <string name="edgewarning">EDGE warnings</string>
    <string name="weaponn">Weapons</string>
    <string name="weaponammo">Ammo</string>
    <string name="box1">Bounding box display mode</string>
    <string name="box2">Select player box interface</string>
    <string name="box3">Disabled</string>
    <string name="boxLeg">Legecy mode</string>
    <string name="precisemode">Precise Mode</string>
    <string name="displayallitme">Display all items</string>
    <string name="vehicl">Vehicles</string>
    <string name="ammo">Ammo</string>
    <string name="weaponnss">Weapons</string>
    <string name="armorsss">Armors</string>
    <string name="healthhh">Health</string>
    <string name="misck">Misc</string>
    <string name="all">All</string>
    <string name="none">NONE</string>
    <string name="boat">Boat</string>
    <string name="aquaril">Aquarail</string>
    <string name="bdrm">BRDM</string>
    <string name="dacia">Dacia</string>
    <string name="ladaniva">LadaNiva</string>
    <string name="mirado">Mirado</string>
    <string name="mototrbike">Bike</string>
    <string name="pick">PickUp</string>
    <string name="rony">Rony</string>
    <string name="scoter">Scooter</string>
    <string name="snowbike">Snowbike</string>
    <string name="tuk">Tuk</string>
    <string name="snowmobile">Snowmobile</string>
    <string name="uav">UAV</string>
    <string name="x2">2X</string>
    <string name="x3">3X</string>
    <string name="x4">4X</string>
    <string name="x6">6X</string>
    <string name="x8">8X</string>
    <string name="hide_title">Hide overlay</string>
    <string name="hide_description">Hide hack/cheat icon. To re-open menu, press volume(+).</string>
    <string name="displayclear">Display items more clearly</string>
    <string name="displayinfo">Turn this off to switch back to the classic style</string>
    <string name="coverarea">Cover display cutout areas</string>
    <string name="scalling">ESP scaling</string>
    <string name="adjust">Adjust the size of overlay UI elements</string>
    <string name="offset">ESP offset</string>
    <string name="offset2">Vertical offset</string>
    <string name="hide">Hide overlay</string>
    <string name="hideinfo">Remember the last position of the icon, for re-open overlay.</string>
    <string name="aimmoded">Aimbot mode</string>
    <string name="disable">Disabled</string>
    <string name="aimbot1_1txt">Memory-based 1.1</string>
    <string name="simulation">Touch simulation 2.0</string>
    <string name="lockpos">Lock aimbot button position</string>
    <string name="part">Aim at body part</string>
    <string name="aimhead">Head</string>
    <string name="aimchest">Chest</string>
    <string name="aimstomatc">Stomach</string>
    <string name="legacy">Legacy*</string>
    <string name="targetmode">Target Selection Mode</string>
    <string name="crosspri">Crosshair priority</string>
    <string name="dispri">Distance priority</string>
    <string name="aimtog">Aimbot Toggle Mode</string>
    <string name="always">Always on</string>
    <string name="fairingg">Firing</string>
    <string name="opensope">Aiming down sights</string>
    <string name="dowble">Firing Aiming down sights</string>
    <string name="aimlcom">Aimbot Lock</string>
    <string name="aimlockinfo">When turned on, aimbot loacks onto the target until turned off. Non-locking mode allows switching between targets</string>
    <string name="aimknock">Ignore knocked out player</string>
    <string name="onscreendis">On-screen FOV display</string>
    <string name="aimfovv">Aimbot FOV</string>
    <string name="onlyaim">Only aim at enemies within the range</string>
    <string name="allowed">Allow the game to use clipboard</string>
    <string name="allowed2">Clear the clipboard content and allow teh game to use clipboard</string>
    <string name="disabled">Block the game from using clipboard</string>
    <string name="disabled2">Disabled the games clipboard permission to prevent detection</string>
    <string name="displayall">Display all items</string>
    <string name="alll">All</string>
    <string name="Nonnn">None</string>
    <string name="buggy">Buggy</string>
    <string name="bus">Bus</string>
    <string name="uaz">UAZ</string>
    <string name="am_300">.300</string>
    <string name="am_55">5.56</string>
    <string name="am_762">7.62</string>
    <string name="am_9m">9mm</string>
    <string name="k98">98k</string>
    <string name="akm">AKM</string>
    <string name="aug">AUG</string>
    <string name="awm">AWM</string>
    <string name="crossbow">Bow</string>
    <string name="dp12">DP12</string>
    <string name="dp28">dp28</string>
    <string name="degle">dEagle</string>
    <string name="dottt">RedDot</string>
    <string name="flare">Flare</string>
    <string name="G36">G36</string>
    <string name="grende">Grenade</string>
    <string name="groza">Groza</string>
    <string name="Hollo">Hollow</string>
    <string name="M1014">M1014</string>
    <string name="M16">M16</string>
    <string name="M24">m24</string>
    <string name="M249">m249</string>
    <string name="M4">M4</string>
    <string name="M762">m762</string>
    <string name="MK14">mk14</string>
    <string name="MK47">mk47</string>
    <string name="MP5K">mp5k</string>
    <string name="Mini14">mini14</string>
    <string name="Molotov">Molotov</string>
    <string name="PP19">pp19</string>
    <string name="Pan">Pan</string>
    <string name="QBU">QBU</string>
    <string name="QBZ">QBZ</string>
    <string name="S12K">s12k</string>
    <string name="S1897">s1897</string>
    <string name="S686">s686</string>
    <string name="SCAR">scarL</string>
    <string name="SKS">SKS</string>
    <string name="SLR">SLR</string>
    <string name="Stun">Stung</string>
    <string name="Tomm">Tommy</string>
    <string name="UMP">ump45</string>
    <string name="Uzi">UZI</string>
    <string name="VSS">VSS</string>
    <string name="Vector">Vector</string>
    <string name="Win94">Win94</string>
    <string name="Armor2">Armor2</string>
    <string name="Armor3">Armor3</string>
    <string name="helm2">Helmet2</string>
    <string name="helm3">Helmet3</string>
    <string name="Bandag">Bandage</string>
    <string name="Drink">Drink</string>
    <string name="FirstAid">FirstAid</string>
    <string name="Injection">Adrenaline</string>
    <string name="Pills">Painkiller</string>
    <string name="Aircraft">Aircraft</string>
    <string name="Airdrop">Airdrop</string>
    <string name="bag2">Bag2</string>
    <string name="bag3">Bag3</string>
    <string name="Compesato">Compensator</string>
    <string name="Loot">Loot</string>
    <string name="Suppressor">Supressor</string>
    <string name="starttingDaemon">Starting daemon...</string>
    <string name="authen">Authentication...</string>
    <string name="changeExecution">Change execution mode</string>
    <string name="select_version">Select PUBGM Version</string>
    <string name="coupe">Coupe RB</string>
    <string name="select_architercture">Select container architecture</string>
    <string name="trick">Trick</string>
    <string name="bike">Bike</string>
    <string name="aquarail">Aquarail</string>
    <string name="truck">Truck</string>
    <string name="brdm">BRDM</string>
    <string name="scooter">Scooter</string>
    <string name="monster">Monster truck</string>
    <string name="coupeRB">Coupe RB</string>
    <string name="utv">UTV</string>
    <string name="faqs">FAQS</string>
    <string name="question_and_answer">&#11044;  Is it CheatNinja/SharpShooter clone?\n\n    -No, but the loader UI/UX designed and program inspired from CheatNinja/SharpShooter(Not A to Z clone/copy).</string>
    <string name="question_and_answer1">&#11044;  Is the ESP UI/UX clone from CheatNinja/SharpShooter for grain subscriber?\n\n    -No, actually CheatAssassin an public figure. We allow to user to share their own choice. Everyone like SS UI/UX so we used that UI. Also this UI/UX is given clean and more comfortable cheating experiance.</string>
    <string name="question_and_answer2">&#11044;  Is CheatAssassin loader collect our user data?\n\n    -Yes, we collect every users imei, Device model and Unique Identification for register an device to our server Used endToend encryption. Admin also do not have rights to misuse any user data.</string>
    <string name="question_and_answer3">&#11044;  Is CheatAssassin Loader collect file/photos etc to save their server, and why this loader needs to allow permission to external storage?\n\n    -No we do not collect any files from any users external storage, this loader needs to allow external storage permission, to save some required data for execution cheats and for future updates.</string>
    <string name="intructionForRoot">Instruction for root mode</string>
    <string name="rootInsInfo">Your phone must be rooted for root mode to work.</string>
    <string name="infoFullInsRoot">&#11044;  Run the game first\n&#11044;  Wait until you are in game lobby (Where you see your character)\n&#11044;  Run cheat and click start</string>
    <string name="intructionForNonRoot">Instruction for non-root mode</string>
    <string name="nonrootInsInfo">Non-root mode requires you to clone the game into a compatible and undetected container app first.</string>
    <string name="infoFullInsNonRoot">&#11044;  Find and install a compatible and undetected container app.\n&#11044;  Add both the cheat and the game into the container app\n&#11044;  Launch the game from container.\n&#11044;  Wait until you are in game lobby(Where you see your character)\n&#11044;  Run the cheat and click Start.</string>
    <string name="ssTtl">PUBGM CheatAssassin</string>
    <string name="pgInfo">This cheat is only compatiable with <h1></h1> <i>PUBG Mobile Global, Korea, Taiwan, Vietnam and India</i></string>
    <string name="aimbot_mode">Aimbot mode</string>
    <string name="memoryaim1">Memory aimbot 1.0 (Hight risk)</string>
    <string name="touchSimulationTxt">Touch simulation 2.0</string>
    <string name="aim_at_body_part">Aim at body part</string>
    <string name="head">Head</string>
    <string name="chest">Chest</string>
    <string name="stomach">Stomach</string>
    <string name="legacyAim">Legacy*</string>
    <string name="global">Global</string>
    <string name="korean">Korean</string>
    <string name="vietnam">Vietnam</string>
    <string name="taiwan">Taiwan</string>
    <string name="india">India</string>
    <string name="save">SAVE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ch_exe_mode">Change execution mode</string>
    <string name="getFreeKey">Get free key</string>
    <string name="logout">Logout</string>
</resources>