<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_layout"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/edit_ss_username"
            app:hintTextAppearance="@color/ColorTextPrimary"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:inputType="textVisiblePassword"
            style="@style/Gm2Theme.EditText"/>

        <ImageButton
            android:layout_gravity="end"
            android:id="@+id/paste"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="30dp"
            android:minHeight="30dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_paste"
            android:tint="@color/ColorTextSecondly"/>

        <ImageButton
            android:layout_gravity="end"
            android:id="@+id/clear"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="30dp"
            android:minHeight="30dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_close_24"
            android:tint="@color/ColorTextSecondly"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_layout"
        android:layout_below="@+id/username_layout"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/edit_ss_password"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:inputType="textPassword"
            style="@style/Gm2Theme.EditText"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/login_button_layout"
        android:layout_below="@+id/password_layout"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp">

        <Button
            android:id="@+id/login_button"
            style="@style/Gm2Theme.EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/effect2"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/login"
            android:textColor="@color/white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/logFrag"
        android:layout_below="@+id/login_button_layout">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/buttonLogin"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Starting daemon..."
                android:textSize="15dp"
                android:textColor="@color/ColorTextSecondly"
                android:id="@+id/aboutLogin"/>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutInfo"
        android:layout_below="@+id/logFrag">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/content_changer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:id="@+id/changeExec"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textColor="@color/ColorTextSecondly"
                android:background="@drawable/drawable_clickevent_bg"
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_exe_mode"
                android:paddingStart="10dp"
                android:textSize="15dp"
                android:paddingEnd="10dp" />
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/getKey"
                android:paddingTop="5dp"
                android:textSize="15sp"
                android:textColor="@color/ColorTextSecondly"
                android:background="@drawable/drawable_clickevent_bg"
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getFreeKey"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
        </LinearLayout>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/loading_text"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>



</RelativeLayout>